Fix overflow bug with 3D transforms

--- a/escher/css/builder-1.3.0.css
+++ b/escher/css/builder-1.3.0.css
@@ -32,6 +32,7 @@ resizes. */
 .escher-zoom-container, .escher-3d-transform-container, svg.escher-svg {
   width: 100% !important;
   height: 100% !important;
+  overflow: hidden;
 }
 
 /* Status */
